# cttest

./: .gitignore  LICENSE  meson.build  readme.md  setup.sh
buildconf/: clang-17.ini
src/: attributes.h  cttest.h  meson.build  suite.h  testresult.h
src/old/: concepts.h  meson.build  suite.h  testresult.h
test/: basic.cpp  meson.build  suite.cpp  suite2.cpp  ut_simple.cpp  ut_suite.h
test/containers/: bitset.h  meson.build  staticmap.h  staticvector.h  staticvector_new.h  ut_staticmap.cpp  ut_staticvector.cpp
